[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/BeepCube_Cut.material" type="Material" id=1]
[ext_resource path="res://game/data/gradient.png" type="Texture" id=2]
[ext_resource path="res://game/floor.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 0.5, 0.5 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_unshaded = true
albedo_texture = SubResource( 3 )

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[node name="StandingGround" type="StaticBody" groups=[
"floor",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
collision_layer = 8
collision_mask = 8
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 1 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 4, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial"]
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )

[node name="MeshInstance2" type="MeshInstance" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.001, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true
render_target_clear_mode = 1

[node name="ColorRect" type="ColorRect" parent="Viewport"]
margin_right = 512.0
margin_bottom = 512.0
color = Color( 0, 0, 0, 0.0196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="burn_l" type="Sprite" parent="Viewport/ColorRect"]
material = SubResource( 5 )
position = Vector2( -64, -64 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="burn2" type="TextureRect" parent="Viewport/ColorRect/burn_l"]
visible = false
material = SubResource( 5 )
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="burn_r" type="Sprite" parent="Viewport/ColorRect"]
material = SubResource( 5 )
position = Vector2( -64, -64 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="burn2" type="TextureRect" parent="Viewport/ColorRect/burn_r"]
visible = false
material = SubResource( 5 )
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
